demo/versioned_docs/version-1.2.0/event-reference/index.mdx
---
title: Event Reference
description: "A dataLayer event for GTM"
custom_edit_url: https://github.com/benedikt-buchert/tracking_docs/edit/main/demo/static/schemas/1.2.0/event-reference.json
---

import SchemaJsonViewer from "@theme/SchemaJsonViewer";

# Event Reference

A dataLayer event for GTM

Please select one of the following options:

- [Complex Event with Validation Constraints](./complex-event)
- [Purchase Event](./purchase-event)
- [Add to Cart Event](./add-to-cart-event)
- [Root AnyOf Event](./root-any-of-event)
- [Root Choice Event](./root-choice-event)
- [Choice Event](./choice-event)
- [Conditional Event](./conditional-event)

<SchemaJsonViewer
  schema={{
    $schema: "https://json-schema.org/draft/2020-12/schema",
    $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/event-reference.json",
    title: "Event Reference",
    description: "A dataLayer event for GTM",
    type: "object",
    allOf: [{ $ref: "./events/components/dataLayer.json" }],
    oneOf: [
      { $ref: "./events/complex-event.json" },
      { $ref: "./events/purchase-event.json" },
      { $ref: "./events/add-to-cart-event.json" },
      { $ref: "./events/root-any-of-event.json" },
      { $ref: "./events/root-choice-event.json" },
      { $ref: "./events/choice-event.json" },
      { $ref: "./events/conditional-event.json" },
    ],
  }}
  sourcePath={"event-reference.json"}
  schemaSources={{
    "event-reference.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/event-reference.json",
      title: "Event Reference",
      description: "A dataLayer event for GTM",
      type: "object",
      allOf: [{ $ref: "./events/components/dataLayer.json" }],
      oneOf: [
        { $ref: "./events/complex-event.json" },
        { $ref: "./events/purchase-event.json" },
        { $ref: "./events/add-to-cart-event.json" },
        { $ref: "./events/root-any-of-event.json" },
        { $ref: "./events/root-choice-event.json" },
        { $ref: "./events/choice-event.json" },
        { $ref: "./events/conditional-event.json" },
      ],
    },
    "events/components/dataLayer.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/components/dataLayer.json",
      title: "dataLayer",
      description: "Schema for the object structure pushed to the dataLayer.",
      type: "object",
      allOf: [{ $ref: "#/$defs/strictObject" }],
      properties: {
        event: { type: "string", description: "The name of the event." },
        ecommerce: {
          type: "object",
          description: "Ecommerce related data.",
          "x-gtm-clear": true,
        },
        user_data: {
          type: "object",
          description: "User related data.",
          "x-gtm-clear": true,
        },
      },
      required: ["event"],
      $defs: {
        strictObject: {
          type: "object",
          propertyNames: { maxLength: 40, pattern: "^(\\$schema)|[a-z0-9_]+$" },
          additionalProperties: {
            anyOf: [
              { $ref: "#/$defs/strictObject" },
              { type: "array", items: { $ref: "#/$defs/strictObject" } },
              { not: { type: "object" } },
            ],
          },
        },
      },
    },
    "events/complex-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/complex-event.json",
      title: "Complex Event with Validation Constraints",
      description:
        "A generic event demonstrating various validation constraints and recursive documentation capabilities.",
      type: "object",
      required: [
        "$schema",
        "event",
        "number_constraints",
        "string_constraints",
        "user_data",
      ],
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/complex-event.json",
        },
        event: {
          type: "string",
          const: "user_update",
          description: "The event name.",
          examples: ["user_update"],
        },
        timestamp: {
          type: "integer",
          description: "Unix timestamp of the event.",
          examples: [16788922],
        },
        user_data: {
          type: "object",
          description: "Container for user information.",
          required: ["user_id", "attributes"],
          properties: {
            user_id: {
              type: "string",
              description: "Unique User ID.",
              examples: ["U_999"],
            },
            is_active: {
              type: "boolean",
              description: "Status of the user.",
              examples: [true],
            },
            attributes: {
              type: "object",
              description: "Nested generic attributes.",
              properties: {
                segment: {
                  type: "string",
                  description: "Marketing segment.",
                  examples: ["premium"],
                },
                score: {
                  type: "number",
                  description: "Engagement score.",
                  examples: [95],
                },
              },
            },
            addresses: {
              type: "array",
              description: "List of user addresses.",
              items: {
                type: "object",
                required: ["city", "zip"],
                properties: {
                  street: {
                    type: "string",
                    description: "The street address.",
                    examples: ["123 Main St"],
                  },
                  city: {
                    type: "string",
                    description: "The city name.",
                    examples: ["New York"],
                  },
                  zip: {
                    type: "string",
                    description: "The postal ZIP code.",
                    examples: ["10001"],
                  },
                },
              },
            },
          },
        },
        string_constraints: {
          type: "string",
          description: "A string with various constraints.",
          minLength: 2,
          maxLength: 10,
          pattern: "^[a-z]+$",
          format: "hostname",
          examples: ["example"],
        },
        number_constraints: {
          type: "number",
          description: "A number with various constraints.",
          minimum: 10,
          maximum: 100,
          multipleOf: 5,
          examples: [50],
        },
        exclusive_number_constraints: {
          type: "number",
          description: "A number with exclusive constraints.",
          exclusiveMinimum: 10,
          exclusiveMaximum: 100,
          examples: [50],
        },
        array_constraints: {
          type: "array",
          description: "An array with various constraints.",
          minItems: 1,
          maxItems: 5,
          uniqueItems: true,
          items: { type: "string" },
          examples: [["a", "b"]],
        },
        contains_array_constraints: {
          type: "array",
          description: "An array with contains constraints.",
          contains: { type: "integer" },
          minContains: 1,
          maxContains: 2,
          examples: [[1, "text", 2]],
        },
        object_constraints: {
          type: "object",
          description: "An object with various constraints.",
          minProperties: 1,
          maxProperties: 3,
          additionalProperties: false,
          propertyNames: { pattern: "^[a-z0-9_]+$" },
          properties: {
            prop_a: {
              type: "string",
              description: "First arbitrary string property.",
              examples: ["some_value"],
            },
            prop_b: {
              type: "string",
              description: "Second arbitrary string property.",
              examples: ["another_value"],
            },
          },
          examples: [{ prop_a: "some_value", prop_b: "another_value" }],
        },
        dependent_required_constraint: {
          type: "object",
          description: "An object with dependent required properties.",
          dependentRequired: { credit_card: ["billing_address"] },
          properties: {
            credit_card: {
              type: "number",
              description: "The credit card number.",
              examples: [1234567890123456],
            },
            billing_address: {
              type: "string",
              description:
                "The billing address associated with the credit card.",
              examples: ["123 Billing Address, Anytown, USA"],
            },
          },
          examples: [
            {
              credit_card: 1234567890123456,
              billing_address: "123 Billing Address, Anytown, USA",
            },
          ],
        },
        enum_constraint: {
          type: "string",
          description: "A property with an enum constraint.",
          enum: ["admin", "editor", "viewer"],
          examples: ["admin"],
        },
        const_constraint: {
          type: "string",
          description: "A property that must have a constant value.",
          const: "must_be_this",
          examples: ["must_be_this"],
        },
      },
    },
    "events/purchase-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/purchase-event.json",
      title: "Purchase Event",
      description:
        "A purchase event fires when a user completes a purchase. Based on Google Analytics 4 ecommerce event specifications.",
      type: "object",
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/purchase-event.json",
        },
        event: {
          type: "string",
          const: "purchase",
          description:
            "The name of the event indicating a purchase has occurred.",
        },
        ecommerce: {
          type: "object",
          description: "Ecommerce related data for the purchase event.",
          properties: {
            transaction_id: {
              type: "string",
              description:
                "The unique ID of a transaction. The transaction_id parameter helps avoid duplicate transaction recording.",
              examples: ["T_12345", "TXN_20231205_001"],
            },
            value: {
              type: "number",
              description:
                "The monetary value of the event. Set value to the sum of (price * quantity) for all items in items.",
              examples: [72.05, 99.99, 150.5],
            },
            currency: {
              type: "string",
              description:
                "The currency of the items in ISO 4217 three-letter format. Required when value is set.",
              minLength: 3,
              maxLength: 3,
              examples: ["USD", "EUR", "GBP"],
            },
            coupon: {
              type: "string",
              description:
                "The coupon/code associated with the event. Event-level and item-level coupon parameters are independent.",
              examples: ["SUMMER_SALE", "WELCOME15"],
            },
            shipping: {
              type: "number",
              description: "The shipping cost associated with the transaction.",
              examples: [5.99, 10, 0],
            },
            tax: {
              type: "number",
              description: "The tax associated with the transaction.",
              examples: [3.6, 7.5, 0],
            },
            customer_type: {
              type: "string",
              enum: ["new", "returning"],
              description:
                "Whether this is from a new or returning customer. 'new' = customer with no purchase in the specified time window (default 540 days). 'returning' = customer with purchase in the specified time window.",
              examples: ["new", "returning"],
            },
            items: {
              type: "array",
              description: "The products purchased in the transaction.",
              minItems: 1,
              items: { $ref: "./components/product.json" },
            },
          },
          required: ["transaction_id", "value", "currency", "items"],
        },
      },
      required: ["$schema", "event"],
    },
    "events/components/product.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/components/product.json",
      title: "A Product",
      description:
        "A product object representing an item for use within a purchase event, based on Google Analytics 4 ecommerce event specifications.",
      type: "object",
      properties: {
        item_id: {
          type: "string",
          description:
            "The ID of the item. Either item_id or item_name is required.",
          examples: ["SKU_12345", "PROD_98765"],
        },
        item_name: {
          type: "string",
          description:
            "The name of the item. Either item_id or item_name is required.",
          examples: ["Stan and Friends Tee", "Blue Running Shoes"],
        },
        affiliation: {
          type: "string",
          description:
            "A product affiliation to indicate a supplier or store. Note: affiliation is only available at the item level.",
          examples: ["Google Merchandise Store", "Nike Store"],
        },
        coupon: {
          type: "string",
          description:
            "The coupon name/code associated with the item. Coupon parameters at event and item levels are independent.",
          examples: ["SUMMER_FUN", "WELCOME20", "SAVE10"],
        },
        discount: {
          type: "number",
          description:
            "The monetary value of the discount per unit applied to the item.",
          examples: [2.22, 5, 10.5],
        },
        index: {
          type: "number",
          description: "The index or position of the item in a list.",
          examples: [0, 1, 2],
        },
        item_brand: {
          type: "string",
          description: "The brand of the item.",
          examples: ["Google", "Nike", "Adidas"],
        },
        item_category: {
          type: "string",
          description:
            "The category of the item. If used as part of a category hierarchy or taxonomy, this is the first category.",
          examples: ["Apparel", "Footwear", "Electronics"],
        },
        item_category2: {
          type: "string",
          description:
            "The second category hierarchy or additional taxonomy of the item.",
          examples: ["Adult", "Women", "Men"],
        },
        item_category3: {
          type: "string",
          description:
            "The third category hierarchy or additional taxonomy of the item.",
          examples: ["Shirts", "Shoes", "Boots"],
        },
        item_category4: {
          type: "string",
          description:
            "The fourth category hierarchy or additional taxonomy of the item.",
          examples: ["Crew", "Running", "Casual"],
        },
        item_category5: {
          type: "string",
          description:
            "The fifth category hierarchy or additional taxonomy of the item.",
          examples: ["Short sleeve", "Long distance", "Lightweight"],
        },
        item_list_id: {
          type: "string",
          description:
            "The ID of the list in which the item was presented to the user. If set, item_list_id at the event level is ignored. If not set, item_list_id at the event level is used if available.",
          examples: ["related_products", "search_results", "recommendations"],
        },
        item_list_name: {
          type: "string",
          description:
            "The name of the list in which the item was presented to the user. If set, item_list_name at the event level is ignored. If not set, item_list_name at the event level is used if available.",
          examples: ["Related Products", "Search Results", "Recommended Items"],
        },
        item_variant: {
          type: "string",
          description:
            "The item variant or unique code or description for additional item details/options.",
          examples: ["green", "Blue Size 10", "M-Black"],
        },
        location_id: {
          type: "string",
          description:
            "The physical location associated with the item, such as the location of a brick-and-mortar store. It is recommended to use the Google Place ID that corresponds to the associated item. A custom location ID can also be used. Note: location_id is only available at the item level.",
          examples: ["ChIJIQBpAG2ahYAR_6128GcTUEo", "store_123", "location_sf"],
        },
        price: {
          type: "number",
          description:
            "The price of the item in the specified currency unit. If a discount is applied to the item, set price to the reduced per-unit price and provide the per-unit price discount in the discount parameter.",
          examples: [10.01, 21.01, 89.99],
        },
        quantity: {
          type: "number",
          description: "The item quantity. If not set, quantity is set to 1.",
          examples: [1, 2, 3],
          default: 1,
        },
        promotion_id: {
          type: "string",
          description: "The ID of the promotion associated with the item.",
          examples: ["P_12345", "PROMO_001"],
        },
        promotion_name: {
          type: "string",
          description: "The name of the promotion associated with the item.",
          examples: ["Summer Sale", "Black Friday", "Flash Deal"],
        },
        creative_name: {
          type: "string",
          description: "The name of the promotion creative.",
          examples: ["summer_banner2", "holiday_email_v1"],
        },
        creative_slot: {
          type: "string",
          description:
            "The name of the creative slot associated with the item.",
          examples: ["featured_app_1", "top_banner", "sidebar"],
        },
        google_business_vertical: {
          type: "string",
          description: "The business vertical for the item (e.g., 'retail').",
          examples: ["retail", "ecommerce"],
        },
      },
      required: [],
    },
    "events/add-to-cart-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/add-to-cart-event.json",
      title: "Add to Cart Event",
      description:
        "An add_to_cart event fires when a user adds one or more items to their shopping cart. Based on Google Analytics 4 ecommerce event specifications.",
      type: "object",
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/add-to-cart-event.json",
        },
        event: {
          type: "string",
          const: "add_to_cart",
          description:
            "The name of the event indicating a add_to_cart has occurred.",
        },
        ecommerce: {
          type: "object",
          description: "Ecommerce related data for the purchase event.",
          properties: {
            value: {
              type: "number",
              description:
                "The monetary value of the event. Set value to the sum of (price * quantity) for all items in items.",
              examples: [30.03, 99.99, 45.5],
            },
            currency: {
              type: "string",
              description:
                "The currency of the items in ISO 4217 three-letter format. Required when value is set.",
              examples: ["USD", "EUR", "GBP"],
            },
            items: {
              type: "array",
              description: "The products added to the cart.",
              minItems: 1,
              items: { $ref: "./components/product.json" },
            },
          },
          required: ["currency", "items"],
        },
      },
      required: ["$schema", "event"],
    },
    "events/root-any-of-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/root-any-of-event.json",
      title: "Root AnyOf Event",
      description: "An example event that has anyOf at the root level.",
      type: "object",
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/root-any-of-event.json",
        },
        event: {
          type: "string",
          const: "any_of_event",
          description: "The event name.",
        },
      },
      required: ["$schema", "event"],
      anyOf: [
        {
          title: "Has Param C",
          description: "This is the description for Param C.",
          properties: {
            param_c: {
              type: "string",
              description: "An optional string parameter for option C.",
              examples: ["example_c"],
            },
          },
        },
        {
          title: "Has Param D",
          properties: {
            param_d: {
              type: "boolean",
              description: "An optional boolean parameter for option D.",
              examples: [true],
            },
          },
        },
      ],
    },
    "events/root-choice-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/root-choice-event.json",
      title: "Root Choice Event",
      description: "An example event that has oneOf at the root level.",
      allOf: [
        {
          type: "object",
          properties: {
            $schema: {
              type: "string",
              description:
                "Defines the structure of the event. This can be used to validate an event against the schema provided.",
              const:
                "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/root-choice-event.json",
            },
          },
          required: ["$schema"],
        },
        {
          oneOf: [
            {
              title: "Option A",
              $anchor: "option_a",
              description: "This is the description for Param A.",
              type: "object",
              properties: {
                event: {
                  type: "string",
                  const: "option_a",
                  description: "The event name.",
                },
                param_a: {
                  type: "string",
                  description: "A string parameter for option A.",
                  examples: ["example_a"],
                },
              },
            },
            {
              title: "Option B",
              $anchor: "option_b",
              type: "object",
              properties: {
                event: {
                  type: "string",
                  const: "option_b",
                  description: "The event name.",
                },
                param_b: {
                  type: "integer",
                  description: "An integer parameter for option B.",
                  examples: [123],
                },
              },
            },
          ],
        },
      ],
    },
    "events/choice-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/choice-event.json",
      title: "Choice Event",
      description: "An example event that uses oneOf and anyOf.",
      type: "object",
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/choice-event.json",
        },
        event: {
          type: "string",
          const: "one_of_event",
          description: "The event name.",
        },
        user_id: {
          description: "The user's ID.",
          oneOf: [
            {
              type: "string",
              title: "User ID as String",
              description: "The user's ID as a string.",
              examples: ["user-123"],
            },
            {
              type: "integer",
              title: "User ID as Integer",
              description: "The user's ID as an integer.",
              examples: [123],
            },
          ],
        },
        payment_method: {
          description: "The user's payment method.",
          type: "object",
          anyOf: [
            {
              title: "Credit Card",
              type: "object",
              properties: {
                payment_type: {
                  type: "string",
                  description: "The type of payment.",
                  enum: ["credit_card", "debit_card"],
                  examples: ["credit_card"],
                },
                card_number: {
                  type: "string",
                  description: "The card number.",
                  examples: ["1234-5678-9012-3456"],
                },
                expiry_date: {
                  type: "string",
                  description: "The card expiry date.",
                  examples: ["12/26"],
                },
              },
              required: ["card_number", "expiry_date"],
            },
            {
              title: "PayPal",
              type: "object",
              properties: {
                payment_type: {
                  type: "string",
                  const: "paypal",
                  description: "The type of payment.",
                },
                email: {
                  type: "string",
                  format: "email",
                  description: "The PayPal account email address.",
                  examples: ["test@example.com"],
                },
              },
              required: ["email"],
            },
          ],
        },
      },
      required: ["event", "user_id", "payment_method"],
    },
    "events/conditional-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/conditional-event.json",
      title: "Conditional Event",
      description:
        "An event demonstrating if/then/else conditional properties. The postal code format depends on the selected country.",
      type: "object",
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.2.0/events/conditional-event.json",
        },
        event: {
          type: "string",
          const: "address_submitted",
          description: "The event name.",
          examples: ["address_submitted"],
        },
        country: {
          type: "string",
          description: "The user's country code.",
          enum: ["US", "CA"],
          examples: ["US"],
        },
      },
      required: ["event", "country"],
      if: { properties: { country: { const: "US" } }, required: ["country"] },
      then: {
        properties: {
          postal_code: {
            type: "string",
            description: "US ZIP code (5-digit format).",
            pattern: "^[0-9]{5}$",
            examples: ["90210"],
          },
          state: {
            type: "string",
            description: "US state abbreviation.",
            minLength: 2,
            maxLength: 2,
            examples: ["CA"],
          },
        },
        required: ["postal_code"],
      },
      else: {
        properties: {
          postal_code: {
            type: "string",
            description: "Canadian postal code (letter-number format).",
            pattern: "^[A-Z][0-9][A-Z] [0-9][A-Z][0-9]$",
            examples: ["K1A 0B1"],
          },
          province: {
            type: "string",
            description: "Canadian province abbreviation.",
            examples: ["ON"],
          },
        },
        required: ["postal_code"],
      },
    },
  }}
/>
