demo/versioned_docs/version-1.3.0/event-reference/index.mdx
---
title: Event Reference
description: "A dataLayer event for GTM"
custom_edit_url: https://github.com/benedikt-buchert/tracking_docs/edit/main/demo/static/schemas/1.3.0/event-reference.json
---

import SchemaJsonViewer from "@theme/SchemaJsonViewer";

# Event Reference

A dataLayer event for GTM

Please select one of the following options:

- [Complex Event with Validation Constraints](./complex-event)
- [Purchase Event](./purchase-event)
- [Add to Cart Event](./add-to-cart-event)
- [Root AnyOf Event](./root-any-of-event)
- [Root Choice Event](./root-choice-event)
- [Choice Event](./choice-event)
- [Conditional Event](./conditional-event)
- [Nested Conditional Event](./nested-conditional-event)
- [Battle Test Event](./battle-test-event)

<SchemaJsonViewer
  schema={{
    $schema: "https://json-schema.org/draft/2020-12/schema",
    $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/event-reference.json",
    title: "Event Reference",
    description: "A dataLayer event for GTM",
    type: "object",
    allOf: [{ $ref: "./web/components/dataLayer.json" }],
    oneOf: [
      { $ref: "./web/complex-event.json" },
      { $ref: "./web/purchase-event.json" },
      { $ref: "./web/add-to-cart-event.json" },
      { $ref: "./web/root-any-of-event.json" },
      { $ref: "./web/root-choice-event.json" },
      { $ref: "./web/choice-event.json" },
      { $ref: "./web/conditional-event.json" },
      { $ref: "./web/nested-conditional-event.json" },
      { $ref: "./web/battle-test-event.json" },
    ],
  }}
  sourcePath={"event-reference.json"}
  schemaSources={{
    "event-reference.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/event-reference.json",
      title: "Event Reference",
      description: "A dataLayer event for GTM",
      type: "object",
      allOf: [{ $ref: "./web/components/dataLayer.json" }],
      oneOf: [
        { $ref: "./web/complex-event.json" },
        { $ref: "./web/purchase-event.json" },
        { $ref: "./web/add-to-cart-event.json" },
        { $ref: "./web/root-any-of-event.json" },
        { $ref: "./web/root-choice-event.json" },
        { $ref: "./web/choice-event.json" },
        { $ref: "./web/conditional-event.json" },
        { $ref: "./web/nested-conditional-event.json" },
        { $ref: "./web/battle-test-event.json" },
      ],
    },
    "web/components/dataLayer.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/components/dataLayer.json",
      title: "dataLayer",
      description: "Schema for the object structure pushed to the dataLayer.",
      type: "object",
      allOf: [{ $ref: "#/$defs/strictObject" }],
      properties: {
        event: { type: "string", description: "The name of the event." },
        ecommerce: {
          type: "object",
          description: "Ecommerce related data.",
          "x-gtm-clear": true,
        },
        user_data: {
          type: "object",
          description: "User related data.",
          "x-gtm-clear": true,
        },
      },
      required: ["event"],
      $defs: {
        strictObject: {
          type: "object",
          propertyNames: { maxLength: 40, pattern: "^(\\$schema)|[a-z0-9_]+$" },
          additionalProperties: {
            anyOf: [
              { $ref: "#/$defs/strictObject" },
              { type: "array", items: { $ref: "#/$defs/strictObject" } },
              { not: { type: "object" } },
            ],
          },
        },
      },
    },
    "web/complex-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/complex-event.json",
      $comment:
        "Authoring example for schema metadata in the raw schema viewer.",
      $vocabulary: {
        "https://json-schema.org/draft/2020-12/vocab/core": true,
        "https://json-schema.org/draft/2020-12/vocab/validation": true,
      },
      title: "Complex Event with Validation Constraints",
      description:
        "A generic event demonstrating various validation constraints and recursive documentation capabilities.",
      "x-tracking-targets": ["web-datalayer-js"],
      type: "object",
      required: [
        "$schema",
        "event",
        "number_constraints",
        "string_constraints",
        "user_data",
      ],
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/complex-event.json",
        },
        event: {
          type: "string",
          const: "user_update",
          description: "The event name.",
          examples: ["user_update"],
        },
        timestamp: {
          type: "integer",
          description: "Unix timestamp of the event.",
          examples: [16788922],
        },
        user_data: {
          type: "object",
          description: "Container for user information.",
          required: ["user_id", "attributes"],
          properties: {
            user_id: {
              type: "string",
              description: "Unique User ID.",
              examples: ["U_999"],
            },
            is_active: {
              type: "boolean",
              description: "Status of the user.",
              examples: [true],
            },
            attributes: {
              type: "object",
              description:
                "Nested generic attributes. Declared keys are documented below; undeclared keys are allowed when they satisfy the schema constraint row for additionalProperties.",
              properties: {
                segment: {
                  type: "string",
                  description: "Marketing segment.",
                  examples: ["premium"],
                },
                score: {
                  type: "number",
                  description: "Engagement score.",
                  examples: [95],
                },
              },
              additionalProperties: {
                type: "string",
                description:
                  "Additional user attribute values keyed by attribute name.",
                examples: ["newsletter_subscriber"],
              },
              patternProperties: {
                "^custom_": {
                  type: "number",
                  description:
                    "Numeric custom attribute values for keys prefixed with custom_.",
                  minimum: 0,
                  examples: [12],
                },
              },
              examples: [
                {
                  segment: "premium",
                  score: 95,
                  loyalty_tier: "gold",
                  custom_ltv: 12,
                },
              ],
            },
            addresses: {
              type: "array",
              description: "List of user addresses.",
              items: {
                type: "object",
                required: ["city", "zip"],
                properties: {
                  street: {
                    type: "string",
                    description: "The street address.",
                    examples: ["123 Main St"],
                  },
                  city: {
                    type: "string",
                    description: "The city name.",
                    examples: ["New York"],
                  },
                  zip: {
                    type: "string",
                    description: "The postal ZIP code.",
                    examples: ["10001"],
                  },
                },
              },
            },
          },
        },
        string_constraints: {
          type: "string",
          description: "A string with various constraints.",
          minLength: 2,
          maxLength: 10,
          pattern: "^[a-z]+$",
          format: "hostname",
          examples: ["example"],
        },
        number_constraints: {
          type: "number",
          description: "A number with various constraints.",
          minimum: 10,
          maximum: 100,
          multipleOf: 5,
          examples: [50],
        },
        exclusive_number_constraints: {
          type: "number",
          description: "A number with exclusive constraints.",
          exclusiveMinimum: 10,
          exclusiveMaximum: 100,
          examples: [50],
        },
        array_constraints: {
          type: "array",
          description: "An array with various constraints.",
          minItems: 1,
          maxItems: 5,
          uniqueItems: true,
          items: { type: "string" },
          examples: [["a", "b"]],
        },
        contains_array_constraints: {
          type: "array",
          description: "An array with contains constraints.",
          contains: { type: "integer" },
          minContains: 1,
          maxContains: 2,
          examples: [[1, "text", 2]],
        },
        object_constraints: {
          type: "object",
          description: "An object with various constraints.",
          minProperties: 1,
          maxProperties: 3,
          additionalProperties: false,
          propertyNames: { pattern: "^[a-z0-9_]+$" },
          properties: {
            prop_a: {
              type: "string",
              description: "First arbitrary string property.",
              examples: ["some_value"],
            },
            prop_b: {
              type: "string",
              description: "Second arbitrary string property.",
              examples: ["another_value"],
            },
          },
          examples: [{ prop_a: "some_value", prop_b: "another_value" }],
        },
        dependent_required_constraint: {
          type: "object",
          description: "An object with dependent required properties.",
          dependentRequired: { credit_card: ["billing_address"] },
          properties: {
            credit_card: {
              type: "number",
              description: "The credit card number.",
              examples: [1234567890123456],
            },
            billing_address: {
              type: "string",
              description:
                "The billing address associated with the credit card.",
              examples: ["123 Billing Address, Anytown, USA"],
            },
          },
          examples: [
            {
              credit_card: 1234567890123456,
              billing_address: "123 Billing Address, Anytown, USA",
            },
          ],
        },
        enum_constraint: {
          type: "string",
          description: "A property with an enum constraint.",
          enum: ["admin", "editor", "viewer"],
          examples: ["admin"],
        },
        const_constraint: {
          type: "string",
          description: "A property that must have a constant value.",
          const: "must_be_this",
          examples: ["must_be_this"],
        },
      },
    },
    "web/purchase-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/purchase-event.json",
      title: "Purchase Event",
      description:
        "A purchase event fires when a user completes a purchase. Based on Google Analytics 4 ecommerce event specifications.",
      "x-tracking-targets": ["web-datalayer-js"],
      type: "object",
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/purchase-event.json",
        },
        event: {
          type: "string",
          const: "purchase",
          description:
            "The name of the event indicating a purchase has occurred.",
        },
        ecommerce: {
          type: "object",
          description: "Ecommerce related data for the purchase event.",
          properties: {
            transaction_id: {
              type: "string",
              description:
                "The unique ID of a transaction. The transaction_id parameter helps avoid duplicate transaction recording.",
              examples: ["T_12345", "TXN_20231205_001"],
            },
            value: {
              type: "number",
              description:
                "The monetary value of the event. Set value to the sum of (price * quantity) for all items in items.",
              examples: [72.05, 99.99, 150.5],
            },
            currency: {
              type: "string",
              description:
                "The currency of the items in ISO 4217 three-letter format. Required when value is set.",
              minLength: 3,
              maxLength: 3,
              examples: ["USD", "EUR", "GBP"],
            },
            coupon: {
              type: "string",
              description:
                "The coupon/code associated with the event. Event-level and item-level coupon parameters are independent.",
              examples: ["SUMMER_SALE", "WELCOME15"],
            },
            shipping: {
              type: "number",
              description: "The shipping cost associated with the transaction.",
              examples: [5.99, 10, 0],
            },
            tax: {
              type: "number",
              description: "The tax associated with the transaction.",
              examples: [3.6, 7.5, 0],
            },
            customer_type: {
              type: "string",
              enum: ["new", "returning"],
              description:
                "Whether this is from a new or returning customer. 'new' = customer with no purchase in the specified time window (default 540 days). 'returning' = customer with purchase in the specified time window.",
              examples: ["new", "returning"],
            },
            items: { $ref: "../components/items.json" },
          },
          required: ["transaction_id", "value", "currency", "items"],
        },
      },
      required: ["$schema", "event"],
    },
    "components/items.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/components/items.json",
      title: "Ecommerce Items Array",
      description: "Items associated with this ecommerce event.",
      type: "array",
      minItems: 1,
      items: { $ref: "./products.json" },
    },
    "components/products.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/components/products.json",
      title: "A Product",
      description:
        "A product object representing an item for use within a purchase event, based on Google Analytics 4 ecommerce event specifications.",
      type: "object",
      properties: {
        item_id: {
          type: "string",
          description:
            "The ID of the item. Either item_id or item_name is required.",
          examples: ["SKU_12345", "PROD_98765"],
        },
        item_name: {
          type: "string",
          description:
            "The name of the item. Either item_id or item_name is required.",
          examples: ["Stan and Friends Tee", "Blue Running Shoes"],
        },
        affiliation: {
          type: "string",
          description:
            "A product affiliation to indicate a supplier or store. Note: affiliation is only available at the item level.",
          examples: ["Google Merchandise Store", "Nike Store"],
        },
        coupon: {
          type: "string",
          description:
            "The coupon name/code associated with the item. Coupon parameters at event and item levels are independent.",
          examples: ["SUMMER_FUN", "WELCOME20", "SAVE10"],
        },
        discount: {
          type: "number",
          description:
            "The monetary value of the discount per unit applied to the item.",
          examples: [2.22, 5, 10.5],
        },
        index: {
          type: "number",
          description: "The index or position of the item in a list.",
          examples: [0, 1, 2],
        },
        item_brand: {
          type: "string",
          description: "The brand of the item.",
          examples: ["Google", "Nike", "Adidas"],
        },
        item_category: {
          type: "string",
          description:
            "The category of the item. If used as part of a category hierarchy or taxonomy, this is the first category.",
          examples: ["Apparel", "Footwear", "Electronics"],
        },
        item_category2: {
          type: "string",
          description:
            "The second category hierarchy or additional taxonomy of the item.",
          examples: ["Adult", "Women", "Men"],
        },
        item_category3: {
          type: "string",
          description:
            "The third category hierarchy or additional taxonomy of the item.",
          examples: ["Shirts", "Shoes", "Boots"],
        },
        item_category4: {
          type: "string",
          description:
            "The fourth category hierarchy or additional taxonomy of the item.",
          examples: ["Crew", "Running", "Casual"],
        },
        item_category5: {
          type: "string",
          description:
            "The fifth category hierarchy or additional taxonomy of the item.",
          examples: ["Short sleeve", "Long distance", "Lightweight"],
        },
        item_list_id: {
          type: "string",
          description:
            "The ID of the list in which the item was presented to the user. If set, item_list_id at the event level is ignored. If not set, item_list_id at the event level is used if available.",
          examples: ["related_products", "search_results", "recommendations"],
        },
        item_list_name: {
          type: "string",
          description:
            "The name of the list in which the item was presented to the user. If set, item_list_name at the event level is ignored. If not set, item_list_name at the event level is used if available.",
          examples: ["Related Products", "Search Results", "Recommended Items"],
        },
        item_variant: {
          type: "string",
          description:
            "The item variant or unique code or description for additional item details/options.",
          examples: ["green", "Blue Size 10", "M-Black"],
        },
        location_id: {
          type: "string",
          description:
            "The physical location associated with the item, such as the location of a brick-and-mortar store. It is recommended to use the Google Place ID that corresponds to the associated item. A custom location ID can also be used. Note: location_id is only available at the item level.",
          examples: ["ChIJIQBpAG2ahYAR_6128GcTUEo", "store_123", "location_sf"],
        },
        price: {
          type: "number",
          description:
            "The price of the item in the specified currency unit. If a discount is applied to the item, set price to the reduced per-unit price and provide the per-unit price discount in the discount parameter.",
          examples: [10.01, 21.01, 89.99],
        },
        quantity: {
          type: "number",
          description: "The item quantity. If not set, quantity is set to 1.",
          examples: [1, 2, 3],
          default: 1,
        },
        promotion_id: {
          type: "string",
          description: "The ID of the promotion associated with the item.",
          examples: ["P_12345", "PROMO_001"],
        },
        promotion_name: {
          type: "string",
          description: "The name of the promotion associated with the item.",
          examples: ["Summer Sale", "Black Friday", "Flash Deal"],
        },
        creative_name: {
          type: "string",
          description: "The name of the promotion creative.",
          examples: ["summer_banner2", "holiday_email_v1"],
        },
        creative_slot: {
          type: "string",
          description:
            "The name of the creative slot associated with the item.",
          examples: ["featured_app_1", "top_banner", "sidebar"],
        },
        google_business_vertical: {
          type: "string",
          description: "The business vertical for the item (e.g., 'retail').",
          examples: ["retail", "ecommerce"],
        },
      },
      required: [],
    },
    "web/add-to-cart-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/add-to-cart-event.json",
      title: "Add to Cart Event",
      description:
        "An add_to_cart event fires when a user adds one or more items to their shopping cart. Based on Google Analytics 4 ecommerce event specifications.",
      "x-tracking-targets": ["web-datalayer-js"],
      type: "object",
      properties: {
        $schema: {
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/add-to-cart-event.json",
          type: "string",
        },
        event: {
          type: "string",
          const: "add_to_cart",
          description:
            "The name of the event indicating a add_to_cart has occurred.",
        },
        ecommerce: {
          type: "object",
          description: "Ecommerce related data for the purchase event.",
          properties: {
            value: {
              type: "number",
              description:
                "The monetary value of the event. Set value to the sum of (price * quantity) for all items in items.",
              examples: [30.03, 99.99, 45.5],
            },
            currency: {
              type: "string",
              description:
                "The currency of the items in ISO 4217 three-letter format. Required when value is set.",
              examples: ["USD", "EUR", "GBP"],
            },
            items: { $ref: "../components/items.json" },
          },
          required: ["currency", "items"],
        },
      },
      required: ["$schema", "event"],
    },
    "web/root-any-of-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/root-any-of-event.json",
      title: "Root AnyOf Event",
      description: "An example event that has anyOf at the root level.",
      "x-tracking-targets": ["web-datalayer-js"],
      type: "object",
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/root-any-of-event.json",
        },
        event: {
          type: "string",
          const: "any_of_event",
          description: "The event name.",
        },
      },
      required: ["$schema", "event"],
      anyOf: [
        {
          title: "Has Param C",
          description: "This is the description for Param C.",
          properties: {
            param_c: {
              type: "string",
              description: "An optional string parameter for option C.",
              examples: ["example_c"],
            },
          },
        },
        {
          title: "Has Param D",
          properties: {
            param_d: {
              type: "boolean",
              description: "An optional boolean parameter for option D.",
              examples: [true],
            },
          },
        },
      ],
    },
    "web/root-choice-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/root-choice-event.json",
      title: "Root Choice Event",
      description: "An example event that has oneOf at the root level.",
      "x-tracking-targets": ["web-datalayer-js"],
      allOf: [
        {
          type: "object",
          properties: {
            $schema: {
              type: "string",
              description:
                "Defines the structure of the event. This can be used to validate an event against the schema provided.",
              const:
                "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/root-choice-event.json",
            },
          },
          required: ["$schema"],
        },
        {
          oneOf: [
            {
              title: "Option A",
              $anchor: "option_a",
              description: "This is the description for Param A.",
              type: "object",
              properties: {
                event: {
                  type: "string",
                  const: "option_a",
                  description: "The event name.",
                },
                param_a: {
                  type: "string",
                  description: "A string parameter for option A.",
                  examples: ["example_a"],
                },
              },
            },
            {
              title: "Option B",
              $anchor: "option_b",
              type: "object",
              properties: {
                event: {
                  type: "string",
                  const: "option_b",
                  description: "The event name.",
                },
                param_b: {
                  type: "integer",
                  description: "An integer parameter for option B.",
                  examples: [123],
                },
              },
            },
          ],
        },
      ],
    },
    "web/choice-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/choice-event.json",
      title: "Choice Event",
      description: "An example event that uses oneOf and anyOf.",
      "x-tracking-targets": ["web-datalayer-js"],
      type: "object",
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/choice-event.json",
        },
        event: {
          type: "string",
          const: "one_of_event",
          description: "The event name.",
        },
        user_id: {
          description: "The user's ID.",
          oneOf: [
            {
              type: "string",
              title: "User ID as String",
              description: "The user's ID as a string.",
              examples: ["user-123"],
            },
            {
              type: "integer",
              title: "User ID as Integer",
              description: "The user's ID as an integer.",
              examples: [123],
            },
          ],
        },
        payment_method: {
          description: "The user's payment method.",
          type: "object",
          anyOf: [
            {
              title: "Credit Card",
              type: "object",
              properties: {
                payment_type: {
                  type: "string",
                  description: "The type of payment.",
                  enum: ["credit_card", "debit_card"],
                  examples: ["credit_card"],
                },
                card_number: {
                  type: "string",
                  description: "The card number.",
                  examples: ["1234-5678-9012-3456"],
                },
                expiry_date: {
                  type: "string",
                  description: "The card expiry date.",
                  examples: ["12/26"],
                },
              },
              required: ["card_number", "expiry_date"],
            },
            {
              title: "PayPal",
              type: "object",
              properties: {
                payment_type: {
                  type: "string",
                  const: "paypal",
                  description: "The type of payment.",
                },
                email: {
                  type: "string",
                  format: "email",
                  description: "The PayPal account email address.",
                  examples: ["test@example.com"],
                },
              },
              required: ["email"],
            },
          ],
        },
      },
      required: ["event", "user_id", "payment_method"],
    },
    "web/conditional-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/conditional-event.json",
      title: "Conditional Event",
      description:
        "An event demonstrating if/then/else conditional properties. The postal code format depends on the selected country.",
      "x-tracking-targets": ["web-datalayer-js"],
      type: "object",
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/conditional-event.json",
        },
        event: {
          type: "string",
          const: "address_submitted",
          description: "The event name.",
          examples: ["address_submitted"],
        },
        country: {
          type: "string",
          description: "The user's country code.",
          enum: ["US", "CA"],
          examples: ["US"],
        },
      },
      required: ["event", "country"],
      if: { properties: { country: { const: "US" } }, required: ["country"] },
      then: {
        properties: {
          postal_code: {
            type: "string",
            description: "US ZIP code (5-digit format).",
            pattern: "^[0-9]{5}$",
            examples: ["90210"],
          },
          state: {
            type: "string",
            description: "US state abbreviation.",
            minLength: 2,
            maxLength: 2,
            examples: ["CA"],
          },
        },
        required: ["postal_code"],
      },
      else: {
        properties: {
          postal_code: {
            type: "string",
            description: "Canadian postal code (letter-number format).",
            pattern: "^[A-Z][0-9][A-Z] [0-9][A-Z][0-9]$",
            examples: ["K1A 0B1"],
          },
          province: {
            type: "string",
            description: "Canadian province abbreviation.",
            examples: ["ON"],
          },
        },
        required: ["postal_code"],
      },
    },
    "web/nested-conditional-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/nested-conditional-event.json",
      title: "Nested Conditional Event",
      description:
        "An event demonstrating if/then/else conditional properties nested inside a property. The shipping details depend on the selected method.",
      "x-tracking-targets": ["web-datalayer-js"],
      type: "object",
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/nested-conditional-event.json",
        },
        event: {
          type: "string",
          const: "order_placed",
          description: "The event name.",
          examples: ["order_placed"],
        },
        order_id: {
          type: "string",
          description: "Unique identifier for the order.",
          examples: ["ORD-12345"],
        },
        shipping: {
          type: "object",
          description: "Shipping details for the order.",
          properties: {
            method: {
              type: "string",
              description: "The shipping method selected by the customer.",
              enum: ["express", "standard"],
              examples: ["express"],
            },
          },
          required: ["method"],
          if: {
            properties: { method: { const: "express" } },
            required: ["method"],
          },
          then: {
            description: "Express shipping includes a priority level.",
            properties: {
              priority_level: {
                type: "string",
                description: "Priority level for express delivery.",
                enum: ["high", "critical"],
                examples: ["high"],
              },
              guaranteed_by: {
                type: "string",
                description: "Guaranteed delivery date (ISO 8601).",
                format: "date",
                examples: ["2026-03-01"],
              },
            },
            required: ["priority_level"],
          },
          else: {
            description: "Standard shipping includes estimated delivery days.",
            properties: {
              estimated_days: {
                type: "integer",
                description: "Estimated number of days for delivery.",
                minimum: 1,
                maximum: 30,
                examples: [5],
              },
            },
          },
        },
      },
      required: ["event", "order_id", "shipping"],
    },
    "web/battle-test-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/battle-test-event.json",
      title: "Battle Test Event",
      description:
        "A stress-test event exercising every nesting combination: oneOf/anyOf inside if/then/else, if/then/else inside oneOf/anyOf branches, nested conditionals inside conditionals, array items with all combos, and deeply nested objects.",
      "x-tracking-targets": ["web-datalayer-js"],
      type: "object",
      required: ["event", "user", "items", "payment", "fulfillment"],
      properties: {
        $schema: {
          type: "string",
          description: "Schema validation URL.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/battle-test-event.json",
        },
        event: {
          type: "string",
          const: "checkout_complete",
          description: "The event name.",
          examples: ["checkout_complete"],
        },
        user: {
          type: "object",
          description:
            "User information with conditional fields based on account type. Demonstrates: if/then/else with oneOf inside then branch, and nested if/then/else inside then branch.",
          required: ["account_type"],
          properties: {
            account_type: {
              type: "string",
              description: "Whether the user is a guest or registered.",
              enum: ["guest", "registered"],
              examples: ["registered"],
            },
            user_id: {
              description: "The user's ID, which can be a string or integer.",
              oneOf: [
                {
                  title: "String ID",
                  type: "string",
                  description: "A string-based user ID.",
                  examples: ["usr-abc-123"],
                },
                {
                  title: "Integer ID",
                  type: "integer",
                  description: "A numeric user ID.",
                  examples: [98765],
                },
              ],
            },
          },
          if: {
            properties: { account_type: { const: "registered" } },
            required: ["account_type"],
          },
          then: {
            description:
              "Registered users have a loyalty tier, preferences, and a contact method choice.",
            properties: {
              loyalty_tier: {
                type: "string",
                description: "The user's loyalty program tier.",
                enum: ["bronze", "silver", "gold", "platinum"],
                examples: ["gold"],
              },
              contact_method: {
                description:
                  "How to reach the registered user — oneOf inside a then branch.",
                oneOf: [
                  {
                    title: "Email Contact",
                    type: "object",
                    description: "Contact via email.",
                    properties: {
                      channel: {
                        type: "string",
                        const: "email",
                        description: "The contact channel identifier.",
                      },
                      email_address: {
                        type: "string",
                        format: "email",
                        description: "The user's email address.",
                        examples: ["user@example.com"],
                      },
                    },
                    required: ["channel", "email_address"],
                  },
                  {
                    title: "SMS Contact",
                    type: "object",
                    description: "Contact via SMS.",
                    properties: {
                      channel: {
                        type: "string",
                        const: "sms",
                        description: "The contact channel identifier.",
                      },
                      phone_number: {
                        type: "string",
                        description: "The user's phone number.",
                        pattern: "^\\+[0-9]{10,15}$",
                        examples: ["+1234567890"],
                      },
                    },
                    required: ["channel", "phone_number"],
                  },
                ],
              },
              preferences: {
                type: "object",
                description:
                  "User notification preferences with nested if/then/else (if/then/else inside if/then).",
                required: ["marketing_consent"],
                properties: {
                  marketing_consent: {
                    type: "boolean",
                    description: "Whether the user consented to marketing.",
                    examples: [true],
                  },
                },
                if: {
                  properties: { marketing_consent: { const: true } },
                  required: ["marketing_consent"],
                },
                then: {
                  description:
                    "Consenting users specify their preferred frequency.",
                  properties: {
                    frequency: {
                      type: "string",
                      description: "How often to send marketing messages.",
                      enum: ["daily", "weekly", "monthly"],
                      examples: ["weekly"],
                    },
                    topics: {
                      type: "array",
                      description: "Marketing topics of interest.",
                      items: { type: "string" },
                      examples: [["deals", "new_arrivals"]],
                    },
                  },
                  required: ["frequency"],
                },
                else: {
                  description:
                    "Non-consenting users only have an opt-out reason.",
                  properties: {
                    opt_out_reason: {
                      type: "string",
                      description: "Why the user declined marketing.",
                      examples: ["too_many_emails"],
                    },
                  },
                },
              },
            },
            required: ["loyalty_tier"],
          },
          else: {
            description: "Guest users only have a session ID.",
            properties: {
              session_id: {
                type: "string",
                description: "Temporary session identifier for guest users.",
                examples: ["sess-xyz-789"],
              },
            },
            required: ["session_id"],
          },
        },
        items: {
          type: "array",
          description:
            "Cart items with if/then/else in array items, and oneOf inside then/else branches.",
          minItems: 1,
          items: {
            type: "object",
            required: ["item_type", "name", "price"],
            properties: {
              item_type: {
                type: "string",
                description: "Whether this is a physical or digital item.",
                enum: ["physical", "digital"],
                examples: ["physical"],
              },
              name: {
                type: "string",
                description: "Item name.",
                examples: ["Wireless Headphones"],
              },
              price: {
                type: "number",
                description: "Item price in the transaction currency.",
                minimum: 0,
                examples: [79.99],
              },
              quantity: {
                type: "integer",
                description: "Number of units.",
                minimum: 1,
                default: 1,
                examples: [2],
              },
            },
            if: {
              properties: { item_type: { const: "physical" } },
              required: ["item_type"],
            },
            then: {
              description:
                "Physical items have weight, dimensions, and a shipping class choice (oneOf inside then).",
              properties: {
                weight_kg: {
                  type: "number",
                  description: "Item weight in kilograms.",
                  minimum: 0.01,
                  examples: [0.35],
                },
                dimensions: {
                  type: "object",
                  description: "Package dimensions in centimeters.",
                  properties: {
                    length: {
                      type: "number",
                      description: "Length in cm.",
                      examples: [20],
                    },
                    width: {
                      type: "number",
                      description: "Width in cm.",
                      examples: [15],
                    },
                    height: {
                      type: "number",
                      description: "Height in cm.",
                      examples: [8],
                    },
                  },
                },
                shipping_class: {
                  description:
                    "Shipping classification — oneOf inside a then branch.",
                  oneOf: [
                    {
                      title: "Standard Parcel",
                      type: "object",
                      description: "Regular parcel shipping.",
                      properties: {
                        class: {
                          type: "string",
                          const: "standard_parcel",
                          description: "The shipping class identifier.",
                        },
                        estimated_days: {
                          type: "integer",
                          description: "Estimated delivery days.",
                          minimum: 1,
                          examples: [5],
                        },
                      },
                      required: ["class"],
                    },
                    {
                      title: "Freight",
                      type: "object",
                      description: "Heavy/oversized freight shipping.",
                      properties: {
                        class: {
                          type: "string",
                          const: "freight",
                          description: "The shipping class identifier.",
                        },
                        requires_signature: {
                          type: "boolean",
                          description: "Whether delivery requires a signature.",
                          examples: [true],
                        },
                        pallet_count: {
                          type: "integer",
                          description: "Number of pallets.",
                          minimum: 1,
                          examples: [1],
                        },
                      },
                      required: ["class", "requires_signature"],
                    },
                  ],
                },
              },
            },
            else: {
              description:
                "Digital items have a download URL and license type.",
              properties: {
                download_url: {
                  type: "string",
                  format: "uri",
                  description: "URL to download the digital item.",
                  examples: ["https://example.com/download/abc"],
                },
                license_type: {
                  type: "string",
                  description: "License model for the digital item.",
                  enum: ["single-use", "perpetual", "subscription"],
                  examples: ["perpetual"],
                },
              },
            },
          },
        },
        payment: {
          type: "object",
          description:
            "Payment details — anyOf with if/then/else inside one of the anyOf branches.",
          required: ["currency"],
          properties: {
            currency: {
              type: "string",
              description: "ISO 4217 currency code.",
              pattern: "^[A-Z]{3}$",
              examples: ["USD"],
            },
          },
          anyOf: [
            {
              title: "Credit Card",
              description:
                "Payment by credit card — includes if/then/else based on card brand (if/then/else inside anyOf).",
              properties: {
                method: {
                  type: "string",
                  const: "credit_card",
                  description: "The payment method identifier.",
                },
                card_brand: {
                  type: "string",
                  description: "Card network.",
                  enum: ["visa", "mastercard", "amex"],
                  examples: ["visa"],
                },
                last_four: {
                  type: "string",
                  description: "Last four digits of the card.",
                  pattern: "^[0-9]{4}$",
                  examples: ["4242"],
                },
              },
              required: ["method", "card_brand", "last_four"],
              if: {
                properties: { card_brand: { const: "amex" } },
                required: ["card_brand"],
              },
              then: {
                description:
                  "Amex cards require a CID (4-digit security code).",
                properties: {
                  cid: {
                    type: "string",
                    description: "4-digit Card Identification Number for Amex.",
                    pattern: "^[0-9]{4}$",
                    examples: ["1234"],
                  },
                },
                required: ["cid"],
              },
              else: {
                description: "Non-Amex cards use a 3-digit CVV.",
                properties: {
                  cvv: {
                    type: "string",
                    description: "3-digit Card Verification Value.",
                    pattern: "^[0-9]{3}$",
                    examples: ["123"],
                  },
                },
              },
            },
            {
              title: "Digital Wallet",
              description: "Payment by digital wallet.",
              properties: {
                method: {
                  type: "string",
                  const: "digital_wallet",
                  description: "The payment method identifier.",
                },
                wallet_provider: {
                  description:
                    "The wallet provider, either a known name or a custom string.",
                  oneOf: [
                    {
                      title: "Known Provider",
                      type: "string",
                      enum: ["apple_pay", "google_pay", "paypal"],
                      examples: ["apple_pay"],
                    },
                    {
                      title: "Custom Provider",
                      type: "string",
                      pattern: "^custom_",
                      description:
                        "A custom wallet provider prefixed with 'custom_'.",
                      examples: ["custom_klarna"],
                    },
                  ],
                },
                wallet_email: {
                  type: "string",
                  format: "email",
                  description: "Email linked to the wallet account.",
                  examples: ["user@example.com"],
                },
              },
              required: ["method", "wallet_provider"],
            },
            {
              title: "Bank Transfer",
              description: "Payment by bank transfer.",
              properties: {
                method: {
                  type: "string",
                  const: "bank_transfer",
                  description: "The payment method identifier.",
                },
                bank_name: {
                  type: "string",
                  description: "Name of the bank.",
                  examples: ["First National Bank"],
                },
                reference_id: {
                  type: "string",
                  description: "Transfer reference number.",
                  examples: ["TXN-2026-001"],
                },
              },
              required: ["method", "bank_name", "reference_id"],
            },
          ],
        },
        fulfillment: {
          type: "object",
          description:
            "Fulfillment details — anyOf with different fulfillment types, some containing nested if/then/else.",
          required: ["type"],
          properties: {
            type: {
              type: "string",
              description: "Fulfillment type.",
              enum: ["delivery", "pickup", "digital"],
              examples: ["delivery"],
            },
          },
          anyOf: [
            {
              title: "Home Delivery",
              description:
                "Home delivery with if/then/else based on whether it's international.",
              properties: {
                fulfillment_method: {
                  type: "string",
                  const: "home_delivery",
                  description: "The fulfillment method identifier.",
                },
                address: {
                  type: "object",
                  description: "Delivery address.",
                  required: ["country", "city"],
                  properties: {
                    country: {
                      type: "string",
                      description: "ISO 3166-1 alpha-2 country code.",
                      examples: ["US"],
                    },
                    city: {
                      type: "string",
                      description: "City name.",
                      examples: ["New York"],
                    },
                    street: {
                      type: "string",
                      description: "Street address.",
                      examples: ["123 Main St"],
                    },
                  },
                  if: {
                    properties: { country: { not: { const: "US" } } },
                    required: ["country"],
                  },
                  then: {
                    description:
                      "International addresses require a customs declaration.",
                    properties: {
                      customs_declaration: {
                        type: "object",
                        description:
                          "Customs information for international shipments.",
                        properties: {
                          declared_value: {
                            type: "number",
                            description: "Declared value for customs.",
                            examples: [150],
                          },
                          contents_description: {
                            type: "string",
                            description: "Description of package contents.",
                            examples: ["Electronics"],
                          },
                          hs_code: {
                            type: "string",
                            description: "Harmonized System tariff code.",
                            examples: ["8518.30"],
                          },
                        },
                        required: ["declared_value", "contents_description"],
                      },
                    },
                    required: ["customs_declaration"],
                  },
                  else: {
                    description: "Domestic US addresses may include a ZIP+4.",
                    properties: {
                      zip_plus_four: {
                        type: "string",
                        description: "Extended ZIP code.",
                        pattern: "^[0-9]{5}-[0-9]{4}$",
                        examples: ["10001-1234"],
                      },
                    },
                  },
                },
              },
              required: ["fulfillment_method", "address"],
            },
            {
              title: "Store Pickup",
              description: "In-store pickup.",
              properties: {
                fulfillment_method: {
                  type: "string",
                  const: "store_pickup",
                  description: "The fulfillment method identifier.",
                },
                store_id: {
                  type: "string",
                  description: "ID of the pickup store.",
                  examples: ["STORE-42"],
                },
                pickup_time: {
                  description:
                    "When to pick up — anyOf inside an anyOf branch.",
                  anyOf: [
                    {
                      title: "Scheduled Time",
                      type: "object",
                      description: "A specific scheduled pickup time.",
                      properties: {
                        slot_type: {
                          type: "string",
                          const: "scheduled",
                          description: "The pickup slot type identifier.",
                        },
                        datetime: {
                          type: "string",
                          format: "date-time",
                          description: "Scheduled pickup date and time.",
                          examples: ["2026-03-15T14:00:00Z"],
                        },
                      },
                      required: ["slot_type", "datetime"],
                    },
                    {
                      title: "ASAP Pickup",
                      type: "object",
                      description: "Pick up as soon as possible.",
                      properties: {
                        slot_type: {
                          type: "string",
                          const: "asap",
                          description: "The pickup slot type identifier.",
                        },
                        estimated_ready_minutes: {
                          type: "integer",
                          description: "Estimated minutes until ready.",
                          minimum: 5,
                          examples: [30],
                        },
                      },
                      required: ["slot_type"],
                    },
                  ],
                },
              },
              required: ["fulfillment_method", "store_id"],
            },
            {
              title: "Digital Fulfillment",
              description: "Purely digital delivery.",
              properties: {
                fulfillment_method: {
                  type: "string",
                  const: "digital",
                  description: "The fulfillment method identifier.",
                },
                delivery_email: {
                  type: "string",
                  format: "email",
                  description: "Email to send digital items to.",
                  examples: ["buyer@example.com"],
                },
              },
              required: ["fulfillment_method", "delivery_email"],
            },
          ],
        },
        discount: {
          description:
            "Applied discount — either a percentage or a fixed amount.",
          oneOf: [
            {
              title: "Percentage Discount",
              type: "object",
              description: "A percentage-based discount.",
              properties: {
                type: {
                  type: "string",
                  const: "percentage",
                  description: "The discount type identifier.",
                },
                value: {
                  type: "number",
                  description: "Discount percentage (0-100).",
                  minimum: 0,
                  maximum: 100,
                  examples: [15],
                },
              },
              required: ["type", "value"],
            },
            {
              title: "Fixed Discount",
              type: "object",
              description: "A fixed-amount discount.",
              properties: {
                type: {
                  type: "string",
                  const: "fixed",
                  description: "The discount type identifier.",
                },
                amount: {
                  type: "number",
                  description: "Discount amount in the transaction currency.",
                  minimum: 0,
                  examples: [10],
                },
              },
              required: ["type", "amount"],
            },
          ],
        },
        metadata: {
          type: "object",
          description:
            "Event metadata with oneOf at property level, containing if/then/else inside one of the oneOf branches.",
          properties: {
            timestamp: {
              type: "string",
              format: "date-time",
              description: "When the event occurred.",
              examples: ["2026-02-24T12:00:00Z"],
            },
            source: {
              description:
                "Where the event originated — oneOf with if/then/else inside a branch.",
              oneOf: [
                {
                  title: "Web Source",
                  type: "object",
                  description:
                    "Event from a web browser, with if/then/else based on device type.",
                  required: ["platform", "device_type"],
                  properties: {
                    platform: {
                      type: "string",
                      const: "web",
                      description: "The source platform identifier.",
                    },
                    device_type: {
                      type: "string",
                      description: "The type of device.",
                      enum: ["desktop", "mobile", "tablet"],
                      examples: ["desktop"],
                    },
                    browser: {
                      type: "string",
                      description: "Browser name.",
                      examples: ["Chrome"],
                    },
                  },
                  if: {
                    properties: { device_type: { const: "mobile" } },
                    required: ["device_type"],
                  },
                  then: {
                    description:
                      "Mobile web sessions include screen size and touch capability.",
                    properties: {
                      screen_width: {
                        type: "integer",
                        description: "Screen width in pixels.",
                        examples: [390],
                      },
                      touch_capable: {
                        type: "boolean",
                        description: "Whether the device supports touch.",
                        examples: [true],
                      },
                    },
                  },
                  else: {
                    description:
                      "Non-mobile web sessions include viewport dimensions.",
                    properties: {
                      viewport_width: {
                        type: "integer",
                        description: "Browser viewport width in pixels.",
                        examples: [1920],
                      },
                      viewport_height: {
                        type: "integer",
                        description: "Browser viewport height in pixels.",
                        examples: [1080],
                      },
                    },
                  },
                },
                {
                  title: "App Source",
                  type: "object",
                  description: "Event from a native app.",
                  required: ["platform", "app_version"],
                  properties: {
                    platform: {
                      type: "string",
                      const: "app",
                      description: "The source platform identifier.",
                    },
                    app_version: {
                      type: "string",
                      description: "Semantic version of the app.",
                      pattern: "^[0-9]+\\.[0-9]+\\.[0-9]+$",
                      examples: ["3.2.1"],
                    },
                    os: {
                      type: "string",
                      description: "Operating system.",
                      enum: ["ios", "android"],
                      examples: ["ios"],
                    },
                  },
                },
              ],
            },
          },
        },
      },
      if: {
        properties: {
          payment: {
            properties: {
              currency: {
                const: "USD",
                description: "ISO 4217 currency code.",
              },
            },
          },
        },
      },
      then: {
        description:
          "USD transactions require tax information. Demonstrates: if/then/else directly inside a then branch (if inside if).",
        properties: {
          tax: {
            type: "object",
            description: "US tax details.",
            properties: {
              rate: {
                type: "number",
                description: "Tax rate as a decimal (e.g. 0.0825 for 8.25%).",
                minimum: 0,
                maximum: 1,
                examples: [0.0825],
              },
              amount: {
                type: "number",
                description: "Calculated tax amount.",
                minimum: 0,
                examples: [6.6],
              },
              jurisdiction: {
                type: "string",
                description: "Tax jurisdiction (state).",
                examples: ["CA"],
              },
            },
            required: ["rate", "amount"],
          },
        },
        if: {
          description: "Check if tax jurisdiction is California.",
          properties: {
            tax: {
              properties: {
                jurisdiction: {
                  const: "CA",
                  description: "Tax jurisdiction (state).",
                },
              },
            },
          },
        },
        then: {
          description:
            "California transactions require additional recycling fee info (if/then/else directly inside a then branch).",
          properties: {
            recycling_fee: {
              type: "object",
              description: "California recycling fee details.",
              properties: {
                applies: {
                  type: "boolean",
                  description: "Whether a recycling fee applies.",
                  examples: [true],
                },
                amount: {
                  type: "number",
                  description: "Recycling fee amount.",
                  minimum: 0,
                  examples: [1.5],
                },
              },
              required: ["applies"],
            },
          },
        },
        else: {
          description:
            "Non-California USD transactions may include a state-specific exemption code.",
          properties: {
            state_exemption_code: {
              type: "string",
              description: "State-specific tax exemption code.",
              examples: ["TX-EXEMPT-001"],
            },
          },
        },
      },
      else: {
        description: "Non-USD transactions may include a VAT number.",
        properties: {
          vat_number: {
            type: "string",
            description: "EU VAT identification number.",
            pattern: "^[A-Z]{2}[0-9A-Z]+$",
            examples: ["DE123456789"],
          },
        },
      },
    },
  }}
/>
